--- a/content/projects.html
+++ b/content/projects.html
@@ -11,8 +11,9 @@ turning ElasticSearch's REST API responses more suitable for grep &
 awk.
 
 * [httprof](https://github.com/drewr/httprof), a command-line
-application for replaying HTTP requests.  Simple to configure
-successive runs of variable size connection pools.
+application for replaying HTTP requests and simulating traffic from
+multiple clients.  Simple to configure successive runs of variable
+size connection pools.
 
 * [esperanto](https://github.com/drewr/esperanto),
 a native Clojure ElasticSearch client.
