--- a/content/src/index.html
+++ b/content/src/index.html
@@ -6,6 +6,9 @@ description: You know it description!
 
 ## Projects
 
+* [norville](https://github.com/drewr/norville), an extensible reverse
+proxy server written for the JVM.
+
 * [es2unix](https://github.com/drewr/es2unix), a set of tools for
 turning ElasticSearch's REST API responses more suitable for grep &
 awk.
